update personal info and publications

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ lang: en
 # Search engine optimization settings
 title: Nouamane Arhachoui
 tagline: Computer Science Student
-description: MSc Student in the Computer Science program of Institut Polytechnique de Paris
+description: PhD Student in Computer Science -- Sorbonne University
 author: Nouamane Arhachoui
 twitter:
   username: nouamarh
