--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,6 +1,6 @@
 image: assets/img/me.jpg
 username: Nouamane Arhachoui
-description: I'm a MSc Student in the Computer Science program of Institut Polytechnique de Paris and a Research Assistant at the LIP6 - Sorbonne Université. I work on how to characterize the diffusion of fake news and propaganda in Social Networks in order to mitigate them. I'm part of the [NPA](https://www-npa.lip6.fr/) and [ComplexNetworks](https://www.complexnetworks.fr/) research teams at the [LIP6](https://www.lip6.fr/).
+description: I'm a PhD Student in Computer Science at the LIP6 lab - [Sorbonne Université](https://www.sorbonne-universite.fr/). I work on how to characterize the diffusion of fake news and propaganda in Social Networks in order to mitigate them. I'm part of the [NPA](https://www-npa.lip6.fr/) research team at the [LIP6](https://www.lip6.fr/) and the RST (Computer Networks) department of [Télécom SudParis](https://telecom-sudparis.eu), [Institut Polytechnique de Paris](https://ip-paris.fr).
 webpage: https://nouamanearhachoui.com
 experience:
   - start: 09/2022
