--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,7 +13,7 @@
                         IEEE/ACM Transactions on Networking, 29(5), 2198–2214. https://doi.org/10.1109/tnet.2021.3085201</li>
                       <li>Arhachoui, N., Bautista, E., Danisch, M., & Giovanidis, A. (2022). 
                         A Fast Algorithm for Ranking Users by their Influence in Online Social Platforms. 
-                        arXiv Preprint. https://doi.org/10.48550/ARXIV.2206.09960</li>
+                        The 2022 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM). https://hal.archives-ouvertes.fr/hal-03700079</li>
 
 - project:
     print: True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
