--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -4,3 +4,9 @@
     date: 07/2022
     # comment:
     slides: /assets/pdfs/StudentsDay_Presentation.pdf # potential link to slides
+
+- presentation:
+    title: A Fast Algorithm for Ranking Users by their Influence in Online Social Platforms
+    event: ASONAM 2022
+    date: 11/2022
+    slides: /assets/pdfs/ASONAM.pdf
