--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -8,7 +8,7 @@ experience:
     experience: PhD Student &ndash; LIP6, Sorbonne Université
   - start: 03/2022
     end: 08/2022
-    experience: Research Assistant &ndash; LIP6, Sorbonne Université
+    experience: Research Internship &ndash; LIP6, Sorbonne Université
   - start: 09/2021
     end: 08/2022
     experience: Master of Science in Computer Science &ndash; Institut Polytechnique de Paris
