update the publications and projects

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -6,6 +6,10 @@
   - firstname: ["Anastasios", "A."]
     url: https://anastasiosgiovanidis.net
 
+"Tabourier":
+  - firstname: ["Lionel", "L."]
+    url: https://lioneltabourier.fr
+
 "Danisch":
   - firstname: ["Maximilien", "M."]
     url: https://sites.google.com/view/danisch
